# IceLanguage

./: pyproject.toml
ice_lang/: README.md  ast.py  builtins.py  cli.py  errors.py  interpreter.py  lexer.py  main.py  parser.py  runtime.py  tokens.py
ice_lang/examples/: fitur_baru.ice  hello.ice  oop.ice  pewarisan.ice  test.ice
scripts/: ice  ice.cmd
